tests/spec/emit/snapshots/match_tuple_with_wildcard.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let triple = (1, 2, 3);
    match triple {
      (1, _, _) => 1,
      (_, 2, _) => 2,
      (_, _, 3) => 3,
      _ => 0,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	triple := lisette.MakeTuple3[int, int, int](1, 2, 3)
	if triple.First == 1 {
		return 1
	} else if triple.Second == 2 {
		return 2
	} else if triple.Third == 3 {
		return 3
	}
	return 0
}
