tests/spec/emit/snapshots/match_with_enum_data.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(opt: Option<int>) -> int {
    match opt {
      Some(x) => x,
      None => 0,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) int {
	if opt.Tag == lisette.OptionSome {
		return opt.SomeVal
	}
	return 0
}
