tests/spec/emit/snapshots/match_with_guards_all_arms_diverge.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nfn main() {\n  match 0 {\n    _ if true => {return},\n    _ => {panic(\"\")}\n  }\n}\n"
---
package main

func main() {
	if true {
		return
	}
	{
		panic("")
	}
}
