tests/spec/emit/snapshots/match_with_user_never_arm_tail.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn die() -> Never { panic("dead") }
  
  fn test(x: int) -> int {
    match x {
      0 => die(),
      _ => x + 1,
    }
  }
---
package main

func die() struct{} {
	panic("dead")
}

func test(x int) int {
	if x == 0 {
		die()
	}
	return x + 1
}
