tests/spec/emit/snapshots/match_with_wildcard.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum Color { Red, Green, Blue }
  
  fn test(color: Color) -> int {
    match color {
      Red => 1,
      _ => 0,
    }
  }
---
package main

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorGreen() Color {
	return Color{Tag: ColorGreen}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorGreen
	ColorBlue
)

type Color struct {
	Tag ColorTag
}

func test(color Color) int {
	if color.Tag == ColorRed {
		return 1
	}
	return 0
}
