tests/spec/emit/snapshots/method_expression_as_value_public.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Box { x: int }
  
  impl Box {
    pub fn add(self, y: int) -> int { self.x + y }
  }
  
  fn main() {
    let f = Box.add
    let _ = f(Box { x: 1 }, 2)
  }
---
package main

type Box struct {
	x int
}

func (b Box) Add(y int) int {
	return b.x + y
}

func main() {
	f := Box.Add
	f(Box{x: 1}, 2)
}
